static/sass/styles.scss
@import "vanilla-framework";

// import cookie policy
@import "@canonical/cookie-policy/build/css/cookie-policy";

// import dial-code dropdown
@import "intl-tel-input/build/css/intlTelInput";

@import "flickity/dist/flickity";

@import "leaflet/dist/leaflet";

$color-brand: #7c355d;
$color-tabs-active-bar: $colors--light-theme--text-default;
$nudge--small: 0.55rem;
$p-small-lh-diff: map-get($line-heights, default-text) -
  map-get($line-heights, small);

@import "pattern_animations";
@import "pattern_application";
@import "pattern_buttons";
@import "pattern_cards";
@import "pattern_carousel";
@import "pattern_careers-modal";
@import "pattern_footer";
@import "pattern_forms";
@import "pattern_icons";
@import "pattern_lists";
@import "pattern_media-object";
@import "pattern_strip";
@import "pattern_navigation";
@import "pattern_search-panel";
@import "pattern_careers-progression";
@import "pattern_global-nav";
@import "pattern_tabs";
@import "pattern_homepage-modal";
@import "pattern_homepage";
@import "pattern_venobox";
@import "maas_styles";

@include vanilla;
@import "fonts"; // Include after 'vanilla' to override
@include additional-p-icons;
@include vf-p-grid-8;
@include vf-p-icon-status-waiting;
@include vf-p-icon-user-group;
@include vf-p-icon-video-play;
@include vf-p-icon-warning-grey;
@include vf-p-icon-sort-both;
@include canonical-u-animations;
@include canonical-p-stepped-list;
@include canonical-p-card;
@include canonical-p-buttons;
@include vf-themed-icons;
@include canonical-p-careers-modal;
@include canonical-p-lists;
@include canonical-p-feedback;
@include canonical-p-footer;
@include canonical-p-forms;
@include canonical-p-withdrawal-modal;
@include canonical-p-media-object;
@include canonical-p-strip;
@include canonical-p-search-panel;
@include canonical-u-footer-align-bottom;
@include canonical-p-careers-progression;
@include canonical-p-global-nav;
@include canonical-p-tabs;
@include canonical-p-navigation-tab-panel;
@include canonical-p-navigation-dropdown-content;
@include canonical-p-navigation-mobile;
@include sprint-carousel;
@include homepage-styles;
@include pattern-venobox;
@include maas-styles;
@include canonical-p-nojs-navigation;
@include vf-u-align;
@include vf-p-content-card;

@media screen and ($breakpoint-large <= width) {
  .p-section__u-no-padding--top {
    h1,
    .p-heading--2,
    .p-section--hero {
      padding-top: 0;
    }
  }
}

.leaflet-control-attribution {
  display: none;
}

.js-find-a-partner__partner {
  // find-a-partner search
  display: none;
}

.js-filtered.js-searched {
  // find-a-partner search
  display: grid;
}

.required-legend {
  font-size: small;
  margin-bottom: 0;
  padding: 0;

  &::before {
    color: $color-negative;
    content: "*";
    position: relative;
    right: 0.25rem;
  }
}

.js-partner-link:hover .p {
  border-right: $bar-thickness solid $colors--light-theme--text-default;
}

.p-image--shadowed {
  border-radius: 2px;
  box-shadow: 0 -2px 27px 0 rgba(0 0 0 / 50%);
}

.is-sticky {
  position: sticky;
  top: 0;
}

// Overide the path to flags for dial codes
.iti__flag {
  background-image: url("#{$assets-path}685bc1a3-flags.png");
}

// stylelint-disable-next-line media-feature-name-no-vendor-prefix
@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
  .iti__flag {
    background-image: url("#{$assets-path}01807c27-flags@2x.png");
  }
}

// Override dropdown background colours to match theme
.iti__dropdown-content {
  background-color: $colors--theme--background-default;
}

.iti__country.iti__highlight {
  background-color: $colors--theme--background-hover;
}

.iti {
  margin-bottom: $input-margin-bottom;
  width: 100%;
}

.iti__country-list {
  background-color: $colors--theme--background-default;
  border: $colors--theme--border-default;
}

// Override h2 in job descriptions to look like h3
.job-desc {
  h1 {
    @extend %vf-heading-2;
  }

  h2 {
    @extend %vf-heading-3;
  }

  h3 {
    @extend %vf-heading-5;
  }

  // Hide any empty p tags or consecutive breaks
  p:empty,
  br + br {
    display: none;
  }
}

// Forces images to be 16:9 aspect ratio without whitespace
// Made to work with link wrapped images
.u-crop--16-9 {
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
  overflow: hidden;

  img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  a {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

.p-featured {
  gap: 0;

  &__item {
    cursor: pointer;
    margin-right: 1px;
    padding: 0 1rem 1rem;

    &:nth-child(3n + 3) {
      padding-right: 0;
    }

    &:active {
      background-color: $colors--light-theme--background-active;
    }

    &:hover {
      background-color: $colors--light-theme--background-hover;

      a {
        text-decoration: underline;
      }
    }
  }

  &__role {
    box-shadow: 0 4px 2px -2px $colors--light-theme--border-default;
    margin-top: 0.5rem;
    min-height: 5rem;
    padding-top: 0.5rem;
  }

  &__filler {
    border-top: 1px solid $colors--light-theme--border-default;
    margin-right: 1px;
    padding: 0 1rem 1rem;
  }

  &.is-fast-track &__item {
    background-color: $color-light;
  }
}

.p-inline-list.is-inlined-with-h2 {
  display: inline-block;
  margin: 1.5rem 0 0 1rem;
}

// Makes side-navigation fit with the custom top-navigation of c.com
.p-side-navigation {
  &--raw-html.is-sticky {
    z-index: 5; // make sure it's higher than 2, that is used by some components (like the rules)
  }
}

.p-list--travel {
  @extend .p-list--divided;

  columns: 5;

  @media (max-width: 620px) {
    columns: 3;
  }
}

.p-list--divided.has-description {
  .p-list__item {
    @extend .p-heading--5;

    margin-bottom: 0;
    padding-bottom: 0;
    padding-top: 0.5rem !important;
  }

  p {
    padding-left: 2rem;
  }
}
/* ... */

